--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 
 <body>
-  <header class="header ">
+  <header class="header">
     <div class="header__logo">
-      <a href="#"><img src="images/logo.webp" alt="Carlos Rivera Logo" /></a>
+      <a href="#" ><img src="images/logo.webp" alt="Carlos Rivera Logo" /></a>
     </div>
     <nav class="header__nav">
       <div class="header__nav-toggle" onclick="toggleMenu();">
@@ -82,6 +82,7 @@
         <ion-icon name="close-outline" class="nav-icon"></ion-icon>
       </div>
       <ul class="header__nav-list">
+        <li><a href="#home" class="nav-item active">Inicio<span>&nbsp;&frasl;&gt;</span></a></li>      
         <li><a href="#about">Sobre Mi<span>&nbsp;&frasl;&gt;</span></a></li>
         <li><a href="#skills">Tecnologías<span>&nbsp;&frasl;&gt;</span></a></li>
         <li><a href="#work">Proyectos<span>&nbsp;&frasl;&gt;</span></a></li>
@@ -133,19 +134,19 @@
               <div class="hero-main-title-box">
                 <p class="enter-text ">Bienvenido a</p>
                 <h1 class="heading-primary"><span>C</span>arlos<span>M</span>ario<span>R</span>ivera.com</h1>
-            
-                  <div class="description-box slide-left">
-                    <p class="description">
-                    <p>Desarrollo de Software y BI.</p>
-                    <p>Apasionado por la tecnología y el desarrollo de software.
-                    </p>
-                    </p>
 
-                    <a href="html/curriculum/curriculum.html" class="link btn btn-outline" target="_blank">Mi
-                      Curriculum !</a>
+                <div class="description-box slide-left">
+                  <p class="description">
+                  <p>Desarrollo de Software y BI.</p>
+                  <p>Apasionado por la tecnología y el desarrollo de software.
+                  </p>
+                  </p>
 
-                  </div>
-              
+                  <a href="html/curriculum/curriculum.html" class="link btn btn-outline" target="_blank">Mi
+                    Curriculum !</a>
+
+                </div>
+
               </div>
             </div>
 
