--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
     <!-- HOME SECTION -->
-    <section class="section-home flex-row-center slide-in" id="section-home">
+    <section class="section-home flex-row-center slide-in" id="home">
       <div class="container">
         <div class="side-social-links--left">
           <ul class="social-links--side">
