--- a/sections/about_me/about_me.html
+++ b/sections/about_me/about_me.html
@@ -31,7 +31,7 @@
             </p>
             <p>Auditor interno ISO 27001.</p>
         </div>
-        <div class="about_column_skill">
+        <div class="about_column_skill container__aumentotamano">
             <div id="movimiento_skills">
 
                 <div class="movimiento_skills-grid">
