--- a/sections/home.html
+++ b/sections/home.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="item_contenido_home">
 			<a
-				href="html/curriculum/curriculum.html"
+				href="../html/curriculum/curriculum.html"
 				class="link btn btn-outline combined-effects-pulse texto-margin"
 				target="_blank"
 				>Mi Curriculum !
