--- a/sections/bi/bi.html
+++ b/sections/bi/bi.html
@@ -11,11 +11,11 @@
         <link rel="stylesheet" href="../../styles/fuentes_y_textos.css" />
 	</head>
 	<body class="textoshadow">
-		<h1>Business Intelligence</h1>
+
 		<section id="business-intelligence">
 			<div class="container_bi">
-				<div class="container__elementoprincipal">
-					<div class="bi__grid__container">
+			
+			
 						<div class="contenedor__Estadisticas__item">
 							<div class="contenedor__Estadisticas__kpi">
 								<h2>KPI</h2>
@@ -41,6 +41,19 @@
 									<script src="https://www.dolar-colombia.com/widget.js?t=2&c=1"></script>
 								</div>
 							</div>
+                            <div class="contenedor__Estadisticas">
+                                <div class=" contenedor__Estadisticas__Estadisticas">
+                                    <h2>Estadísticas:</h2>
+                                    <label for="months">Ingrese el número de meses para el cálculo (máximo 12 meses):</label>
+                                    <input type="number" id="months" name="months" value="1" min="1" max="12">
+                                    <button onclick="generateStatistics()">Generar Estadísticas</button>
+                                    <div id="charts">
+                                      <canvas id="lineChart" class="contenedor__Estadisticas__item"></canvas>
+                                      <canvas id="barChart" class="contenedor__Estadisticas__item"></canvas>
+                                      <canvas id="pieChart" class="contenedor__Estadisticas__item"></canvas>
+                                    </div>
+                                  </div>
+                            </div>
 						</div>
 						<div class="contenedor__Estadisticas__item">
 							<div class="contenedor__Estadisticas_predicciones">
@@ -69,61 +82,29 @@
 							</div>
 						</div>
 
-						<div class="contenedor__Estadisticas">
-							<div class="contenedor__Estadisticas__Estadisticas">
-								<h2>Estadísticas:</h2>
-								<label for="months"
-									>Ingrese el número de meses para el cálculo
-									(máximo 12 meses):</label
-								>
-								<input
-									type="number"
-									id="months"
-									name="months"
-									value="1"
-									min="1"
-									max="12"
-								/>
-								<button onclick="generateStatistics()">
-									Generar Estadísticas
-								</button>
-								<div id="charts">
-									<canvas
-										id="lineChart"
-										class="contenedor__Estadisticas__item"
-									></canvas>
-									<canvas
-										id="barChart"
-										class="contenedor__Estadisticas__item"
-									></canvas>
-									<canvas
-										id="pieChart"
-										class="contenedor__Estadisticas__item"
-									></canvas>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 
-				<div class="container__elemento">
-					<h2 class="subtitulo">Valores del Dólar en Colombia</h2>
-					<div id="contenedor__table">
-						<table id="dollar-values" class="sortable">
-							<thead>
-								<tr>
-									<th data-sort="date">Fecha</th>
-									<th data-sort="number">
-										Valor en Pesos Colombianos
-									</th>
-								</tr>
-							</thead>
-							<tbody>
-								<!-- Los datos se rellenarán aquí -->
-							</tbody>
-						</table>
-					</div>
-				</div>
+                        <div class="contenedor__Estadisticas__item">
+                            <h2 class="subtitulo">Valores del Dólar en Colombia</h2>
+                            <div id="contenedor__table">
+                                <table id="dollar-values" class="sortable">
+                                    <thead>
+                                        <tr>
+                                            <th data-sort="date">Fecha</th>
+                                            <th data-sort="number">
+                                                Valor en Pesos Colombianos
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <!-- Los datos se rellenarán aquí -->
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+				
+			
+
+
 			</div>
 		</section>
 
